fix number alignment issue

--- a/src/pages/join.scss
+++ b/src/pages/join.scss
@@ -134,13 +134,13 @@
 
 	.join-step {
 		display: flex;
-		--number-size: 90px;
+		--number-size: 75px;
+		padding-top: 1rem;
 		@media (max-width: ($join-grid-breakpoint - 1px)) {
 			--number-size: 70px;
 			flex-direction: column;
 			align-items: center;
 			justify-content: center;
-			padding-top: 10px;
 		}
 		@media (min-width: $join-grid-breakpoint) {
 			align-items: flex-start;
@@ -166,6 +166,11 @@
 	.join-step__content {
 		background: #fff;
 		text-align: center;
+		& > h3 {
+			@media (min-width: $join-grid-breakpoint) {
+				margin-top: 0;
+			}
+		}
 
 		& > * + * {
 			margin-bottom: 1.3rem;
